: add dogma exs linter and enhance readme

--- a/elixir/Dockerfile
+++ b/elixir/Dockerfile
@@ -4,3 +4,9 @@ MAINTAINER Denis Laliberté <denis.laliberte@gmail.com>
 
 USER root
 
+VOLUME /test
+WORKDIR /test
+
+COPY *.exs /test
+RUN mix local.hex --force
+RUN  mix deps.get
