: add readme for clojure

--- a/clojure/Dockerfile
+++ b/clojure/Dockerfile
@@ -1,4 +1,7 @@
 FROM clojure
-COPY . /usr/src/app
-WORKDIR /usr/src/app
-CMD ["lein", "run"]
+USER root
+VOLUME /test
+COPY ./profile.clj /root/.lein/profiles.clj
+COPY . /test
+WORKDIR /test/hello-world
+RUN lein eastwood
